# ECS-with-Scene-and-Node

./: .gitmodules  CMakeLists.txt  Dependency.cmake  ECS.code-workspace  ECS.eapx  ECS.ldb  Inhouse.eapx  LICENSE  README.md  README_ENG.md
Interface/: DependencyLinkage.h  Entity.cpp  Entity.h  IComponent.h  IEntity.h  INode.h  IObject.h  IScene.h  ISystem.h  Scene.cpp  Scene.h
Manager/: ComponentManager.cpp  ComponentManager.h  EntityManager.cpp  EntityManager.h  Manager.h  ManagerList.h  NodeManager.cpp  NodeManager.h  SceneManager.cpp  SceneManager.h  SystemManager.cpp  SystemManager.h
UUID/: MyUUID.cpp  MyUUID.h
Utils/: Utils.h
demofile/: CMakeLists.txt  ComponentList.h  NodeList.h  Scene.cpp  Scene.h  SystemList.h  main.cpp
externaldemofile/: CMakeLists.txt  ComponentList.h  NodeList.h  SystemList.h  main.cpp
include/: ECS.h  TimeStep.h  Utils.h
include/Container/: BaseContainer.h  ComponentContainer.h  Container.h  DataRegistry.h  EntityContainer.h  NodeContainer.h  Registry.h  Storage.h  SystemRegistry.h
include/Graph/: Graph.h
include/Interface/: Entity.h  Scene.h
include/Manager/: ComponentManager.h  EntityManager.h  LinkageManager.h  SystemManager.h
include/Object/: Data.h  Entity.h  Object.h  Scene.h  System.h
include/Registry/: ComponentRegistry.h  ContainerRegistry.h  NodeRegistry.h  SystemRegistry.h
include/UUID/: UUID.h
include/Utils/: ECSUtils.h
src/Container/: EntityContainer.cpp  SystemRegistry.cpp
src/Graph/: Graph.cpp
src/Interface/: ILinkage.cpp
src/Manager/: EntityManager.cpp  SceneManager.cpp
src/Object/: Entity.cpp  Object.cpp  Scene.cpp  System.cpp
src/Registry/: SystemRegistry.cpp
src/UUID/: MyUUID.cpp  UUID.cpp
src/Utils/: ECSUtils.cpp
